# git_hit_monitor

./: .gitignore  AGENT.md  README.md  config.json  constants.py  main.py  pyproject.toml  requirements.txt
helpers/: __init__.py  camo_helper.py  configuration_helper.py  date_helper.py  enum_helper.py  json_helper.py  plot_helper.py  process_data_helper.py  process_view_count_helper.py  sheets_helper.py  string_helper.py  timer_helper.py
tests/: manual_test_averages.py  test_plot_range_generator.py  test_process_data_helper.py  verify_hourly_plots.py
