[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git_hit_monitor"
version = "0.1.0"
description = "Monitor git hits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "google-api-python-client==2.142.0",
    "google-auth==2.34.0",
    "gspread==6.1.2",
    "oauthlib==3.2.2",
    "requests==2.32.3",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
    "pytest==9.0.2",
]

[tool.setuptools]
packages = ["helpers", "plots"]
py-modules = ["main", "constants"]
